# check-software-version-for-citation

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  CITATION.cff  README.md  action.yaml  action.yml  example-workflow.yml  example.pre-commit-config.yaml  main.py  pyproject.toml
.github/workflows/: check-same-version.yml  check-version-consistency.yml  review-cff-authors-pr.yml
src/same_version/: log_collector.py  main.py
src/same_version/checkers/: cargo_toml_checker.py  checker.py  citation_cff_checker.py  codemeta_json_checker.py  composer_json_checker.py  file_checker.py  github_event_checker.py  nuspec_checker.py  package_json_checker.py  pom_xml_checker.py  py_version_assignment_checker.py  pyproject_toml_checker.py  r_description_checker.py  ro_crate_metadata_json_checker.py  setup_cfg_checker.py  setup_py_checker.py  zenodo_json_checker.py
src/same_version/extractors/: cargo_toml_extractor.py  citation_cff_extractor.py  cli_extractor.py  codemeta_json_extractor.py  composer_json_extractor.py  extractor.py  file_extractor.py  github_event_extractor.py  ini_extractor.py  json_extractor.py  nuspec_extractor.py  package_json_extractor.py  pom_xml_extractor.py  py_ast_extractor.py  py_version_assignment_extractor.py  pyproject_toml_extractor.py  r_description_extractor.py  ro_crate_metadata_json_extractor.py  setup_cfg_extractor.py  setup_py_extractor.py  toml_extractor.py  xml_extractor.py  yaml_extractor.py  zenodo_json_extractor.py
src/version_consistency/: main.py  utils.py
src/version_consistency/checkers/: checker.py  citation_cff_checker.py  codemeta_json_checker.py  file_checker.py  github_event_checker.py  package_json_checker.py  pyproject_toml_checker.py  setup_py_checker.py  zenodo_json_checker.py
src/version_consistency/extractors/: citation_cff_extractor.py  cli_extractor.py  codemeta_json_extractor.py  extractor.py  file_extractor.py  github_event_extractor.py  json_extractor.py  package_json_extractor.py  pyproject_toml_extractor.py  setup_py_extractor.py  tag_extractor.py  toml_extractor.py  zenodo_json_extractor.py
tests/extractors/: conftest.py  test_cargo_toml_extractor.py  test_citation_cff_extractor.py  test_cli_extractor.py  test_codemeta_json_extractor.py  test_composer_json_extractor.py  test_nuspec_extractor.py  test_package_json_extractor.py  test_pom_xml_extractor.py  test_py_version_assignment_extractor.py  test_pyproject_toml_extractor.py  test_r_description_extractor.py  test_ro_crate_metadata_json_extractor.py  test_setup_cfg_extractor.py  test_setup_py_extractor.py  test_zenodo_json_extractor.py
tests/test_data/: .nuspec  .zenodo.json  CITATION.cff  Cargo.toml  DESCRIPTION  codemeta.json  composer.json  main_with_literal_version_assignment.py  package.json  pom.xml  pyproject.toml  ro-crate-metadata.json  setup.cfg  setup.py
