[metadata]
name = my-dummy-app
version = 9.0.3
description = A dummy app for unit testing.
author = Test Author
author_email = author@example.com
license = MIT
url = https://github.com/example/my-dummy-app
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Development Status :: 4 - Beta

[options]
packages = find:
python_requires = >=3.7
install_requires =
    requests >=2.0.0

[options.extras_require]
dev =
    pytest
    flake8
